[package]
name = "options_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4.33"
curl = "0.4.44"
reqwest = "0.11.24"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0.113"
amqprs = "1.5.3"
tracing-subscriber = "0.3.18"
