[package]
name = "options_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full", "macros"] }
chrono = "0.4.33"
curl = "0.4.44"
reqwest = "0.11.24"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
futures = "0.3.30"
serde_json = "1.0.113"
amqprs = "1.5.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.77"
tracing = "0.1.40"
lru = "0.12.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "macros"] }
tokio-util = "0.7.10"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.6.0"
futures-util = "0.3.30"
http-body-util = "0.1.1"
